work on architecture and ci/cd

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Autonomous Car Manager
+site_name: Lambda deeper studies
 repo_url: https://github.com/jbcodeforce/autonomous-car-mgr.git
 site_author: Jerome Boyer
 nav:
